--- a/src/ui-style/syntax-highlight.css
+++ b/src/ui-style/syntax-highlight.css
@@ -104,8 +104,13 @@
   }
 
 #target-element{
-	background-color:#eec;
+	background-color:#e8e8b9;
   }
+
+.dom [handler="spotlight-node"]:hover
+{
+  background-color: #f5f5e0;
+}
 
 .dom .comment{
 	color:#888;
@@ -146,7 +151,7 @@
 }
 
 .tree-style > div > div {
-  background:transparent url('../ui-images/dom-tree-style.gif') scroll repeat 7px 0;
+  background:transparent url('../ui-images/dom-tree-style.gif') scroll repeat 10px 0;
   }
 
 .tree-style > div > div > div {
@@ -157,10 +162,11 @@
   display:inline-block;
   vertical-align: middle;
   content: '';
-  width:7px;
+  width:10px;
   height:1px;
   background:transparent url('../ui-images/dom-tree-style-h.gif') scroll no-repeat 0 0;
-  margin-left: -7px;
+  margin-left: -10px;
+  margin-right: 1px;
   }
 
 .tree-style > div > div > div:first-child > span:first-child:before {
